fix: Flow layout issues

--- a/editor.planx.uk/src/pages/FlowEditor/floweditor.scss
+++ b/editor.planx.uk/src/pages/FlowEditor/floweditor.scss
@@ -47,7 +47,8 @@ $fontMonospace: "Source Code Pro", monospace;
   li {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
+    width: max-content;
 
     > a:focus,
     > a:active {
